[metadata]
name = ztox
version = 1.0.0 
author = Sabarish
author_email = sabarish.science@gmail.com
url = https://github.com/Sabb95/zTOx
description = 'A package that will convert redshift to distances'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
        scipy
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    ztox = ztox.ztox:ztox

[options.package_data]
* = *.pck